# django-hyperview

./: .gitignore  MANIFEST.in  README.md  db.sqlite3  pyproject.toml  requirements.in  requirements.txt
.github/: FUNDING.yaml
config/: settings.py  urls.py
contacts/: apps.py  forms.py  models.py  urls.py  views.py
contacts/management/commands/: fake_contacts.py
contacts/migrations/: 0001_initial.py
contacts/templates/: deleted.xml  edit.xml  form_fields.xml  index.xml  layout.xml  new.xml  rows.xml  show.xml
demo/src/: constants.ts
django_hv/: fields.py  forms.py  http.py  middleware.py  utils.py  widgets.py
django_hv/templates/django_hv/forms/: label.xml  view.xml
django_hv/templates/django_hv/forms/widgets/: attrs.xml  date-field.xml  option.xml  picker-field.xml  picker-item.xml  select-multiple.xml  select-single.xml  switch.xml  text-field.xml
django_hv/templatetags/: hv_tags.py
